# osrs-wiki-prices

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/endpoints/: mod.rs
src/endpoints/latest/: mod.rs
src/endpoints/mapping/: mod.rs
src/endpoints/prices/: mod.rs
src/endpoints/prices/five_minutes/: mod.rs
src/endpoints/prices/one_hour/: mod.rs
src/endpoints/timeseries/: mod.rs
src/testing/: mod.rs
src/types/: mod.rs
