[package]
name = "osrs-wiki-prices"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
reqwest = { version = "0.12.15", features = ["gzip", "json"] }
chrono = { version = "0.4.41", features = ["serde"] }