[package]
name = "osrs-wiki-prices"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/elertan/osrs-wiki-prices"
description = "Rust client for the OSRS Wiki Prices API"
keywords = ["api", "rest", "osrs", "wiki", "prices"]

[dependencies]
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
reqwest = { version = "0.12.15", features = ["gzip", "json"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde_json = "1.0.140"